# IC-test-lab-segmentation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/segmentation_app/: __init__.py
src/segmentation_app/data/: __init__.py
src/segmentation_app/inference/: __init__.py  engine.py
src/segmentation_app/training/: __init__.py  config.py  experiment_plans.py  run.py  splits.py  trainer.py
src/segmentation_app/ui/: __init__.py
